test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET__api_private_ipinfo_5.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 01 Apr 2025 09:06:40 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="RBtGgPqtO4T9mK5H9jCFH5VVnOB2nGns", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}